--- a/.eslintrc
+++ b/.eslintrc
@@ -7,13 +7,15 @@
   "plugins": [
     "react"
   ],
+  "globals": {
+    "fetch": true
+  },
   "rules": {
     "indent": [2, 4],
     "quotes": [2, "single"],
     "linebreak-style": [2, "unix"],
     "semi": [2, "always"],
     "constructor-super": 2,
-    "no-arrow-condition": 2,
     "no-class-assign": 2,
     "no-const-assign": 2,
     "no-dupe-class-members": 2,
@@ -23,16 +25,13 @@
     "prefer-spread": 1,
     "prefer-template": 1,
     "require-yield": 2,
-    "jsx-quotes": 1,
     "react/forbid-prop-types": 0,
-    "react/jsx-boolean-value": 1,
     "react/jsx-closing-bracket-location": 0,
     "react/jsx-indent-props": 1,
     "react/jsx-max-props-per-line": 1,
     "react/jsx-no-bind": 1,
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-undef": 1,
-    "react/jsx-sort-prop-types": 1,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-danger": 1,
@@ -47,7 +46,6 @@
     "react/react-in-jsx-scope": 1,
     "react/require-extension": 1,
     "react/self-closing-comp": 1,
-    "react/sort-comp": 1,
     "react/wrap-multilines": 1
   },
   "extends": "eslint:recommended"
