Allow toggling between a swiper and a tabbed layout

--- a/src/config.example.json
+++ b/src/config.example.json
@@ -1,6 +1,7 @@
 {
-    testUser: {
-        username: "myGithubUser",
-        password: "myGithubPassword"
+    "navigation": "tabs|swiper", 
+    "testUser": {
+        "username": "myGithubUser",
+        "password": "myGithubPassword"
     }
 }
