--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.2.3",
     "immutable": "^3.7.5",
     "lodash": "^4.13.1",
+    "moment": "^2.13.0",
     "react-native": "^0.19.0",
     "react-native-swiper": "^1.4.3",
     "react-redux": "^4.4.0",
