--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.13.0",
     "react-native": "^0.19.0",
     "react-native-swiper": "^1.4.3",
+    "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.0",
     "redux": "^3.3.0",
     "redux-logger": "^2.6.1",
