Remove some commented out code, and fix the ListView warning

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "navigation": "swiper",
+    "navigation": "tabs",
     "testUser": {
         "username": "joachim@seminck.be",
         "password": "tLxWRwQWXWMK6xk3WKuVqZMaTvPbkRHKskHGJHMutUzTj"
